// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component Snapshot Tests should match snapshot - basic button 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#6366F1",
      "borderRadius": 500,
      "justifyContent": "center",
      "minHeight": 54,
      "minWidth": 50,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 10,
      }
    }
  >
    <Text
      center={true}
      color="#FFFFFF"
      medium={true}
      size={14}
    >
      Basic Button
    </Text>
  </View>
</View>
`;

exports[`Button Component Snapshot Tests should match snapshot - button with icons 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#6366F1",
      "borderRadius": 500,
      "justifyContent": "center",
      "minHeight": 54,
      "minWidth": 50,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 10,
      }
    }
  >
    <View
      style={
        [
          undefined,
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "height": 20,
            "width": 20,
          }
        }
        testID="svg-icon-star"
      >
        <Text>
          star
        </Text>
      </View>
      <View
        style={
          {
            "height": undefined,
            "width": 12,
          }
        }
        testID="sized-box"
      />
    </View>
    <Text
      center={true}
      color="#FFFFFF"
      medium={true}
      size={14}
    >
      With Icons
    </Text>
    <View
      style={
        [
          undefined,
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "height": 20,
            "width": 20,
          }
        }
        testID="svg-icon-arrow-right"
      >
        <Text>
          arrow-right
        </Text>
      </View>
      <View
        style={
          {
            "height": undefined,
            "width": 12,
          }
        }
        testID="sized-box"
      />
    </View>
  </View>
</View>
`;

exports[`Button Component Snapshot Tests should match snapshot - disabled button 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#6366F1",
      "borderRadius": 500,
      "justifyContent": "center",
      "minHeight": 54,
      "minWidth": 50,
      "opacity": 0.5,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 10,
      }
    }
  >
    <Text
      center={true}
      color="#FFFFFF"
      medium={true}
      size={14}
    >
      Disabled
    </Text>
  </View>
</View>
`;

exports[`Button Component Snapshot Tests should match snapshot - full props 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "borderColor": "#1F2937",
      "borderRadius": 20,
      "borderWidth": 1,
      "justifyContent": "center",
      "minHeight": 54,
      "minWidth": 50,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 10,
      }
    }
  >
    <View
      style={
        [
          undefined,
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "height": 20,
            "width": 20,
          }
        }
        testID="svg-icon-star"
      >
        <Text>
          star
        </Text>
      </View>
      <View
        style={
          {
            "height": undefined,
            "width": 12,
          }
        }
        testID="sized-box"
      />
    </View>
    <Text
      center={true}
      color="#1F2937"
      medium={true}
      size={14}
    >
      Full Button
    </Text>
    <View
      style={
        [
          undefined,
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "height": 20,
            "width": 20,
          }
        }
        testID="svg-icon-check"
      >
        <Text>
          check
        </Text>
      </View>
      <View
        style={
          {
            "height": undefined,
            "width": 12,
          }
        }
        testID="sized-box"
      />
    </View>
  </View>
</View>
`;

exports[`Button Component Snapshot Tests should match snapshot - loading button 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#6366F1",
      "borderRadius": 500,
      "justifyContent": "center",
      "minHeight": 54,
      "minWidth": 50,
      "opacity": 1,
    }
  }
>
  <ActivityIndicator
    color="#FFFFFF"
  />
</View>
`;

exports[`Button Component Snapshot Tests should match snapshot - outlined button 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "borderColor": "#1F2937",
      "borderRadius": 500,
      "borderWidth": 1,
      "justifyContent": "center",
      "minHeight": 54,
      "minWidth": 50,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 10,
      }
    }
  >
    <Text
      center={true}
      color="#1F2937"
      medium={true}
      size={14}
    >
      Outlined
    </Text>
  </View>
</View>
`;
